WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316325
Fix Swift-interop build break in WebPageProxy::getFrameTreesForBackForwardItem
https://bugs.webkit.org/show_bug.cgi?id=316325
Summary
Fix Swift-interop build break in WebPageProxy::getFrameTreesForBackForwardItem
zak ridouh
Reported
2026-06-04 11:49:23 PDT
build fix.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-04 11:49:30 PDT
<
rdar://problem/178747050
>
zak ridouh
Comment 2
2026-06-04 11:53:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66469
EWS
Comment 3
2026-06-04 12:34:45 PDT
Committed
314566@main
(2a086d93c471): <
https://commits.webkit.org/314566@main
> Reviewed commits have been landed. Closing PR #66469 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug