Fix Swift-interop build break in WebPageProxy::getFrameTreesForBackForwardItem https://bugs.webkit.org/show_bug.cgi?id=316325 rdar://178747050

Reviewed by Brandon Stewart.

backForwardList().itemAtDeltaFromCurrentIndex(relativeIndex) compiles in the
non-Swift build but fails under ENABLE(BACK_FORWARD_LIST_SWIFT), since the
generated Swift->C++ thunk drops Swift's default allowSkipping argument.

Route through backForwardListWrapper() instead, which has a uniform C++ API
with the default argument across both builds. Behavior is unchanged.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::getFrameTreesForBackForwardItem):

Canonical link: https://commits.webkit.org/314566@main